# openvirt

./: .env  .env_example  Cargo.toml  README.md
docs/: todo.md
migrations/: 20250705142544_alter_balance_type.sql  init.sql
src/: http.rs  main.rs
src/database/: mod.rs
src/handlers/: auth.rs  mod.rs
src/middleware/: mod.rs
src/models/: mod.rs  pve_node.rs  user.rs  version.rs
src/routes/: mod.rs
src/utils/: jwt.rs  mod.rs
