[package]
name = "openvirt"
version = "0.1.0"
edition = "2024"

[dependencies]
pve = "0.1.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.59"
url = "2.5.0"
dotenv = "0.15.0"
actix-web = "4.0.1"
actix-rt = "2.0.0"
actix-web-httpauth = "0.8.0"
jsonwebtoken = "8.3.0"
chrono = { version = "0.4.19", features = ["serde"] }
bcrypt = "0.15.0"
